--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
+# Composer
 composer.phar
 /vendor/
-
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
-.php_cs.cache
 composer.lock
+.php_cs.cache
 
 # IntelliJ project files
 .idea
 *.iml
 out
 gen
+
+# Development
+*.sh
