--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "keywords": ["lottery", "engine"],
     "type": "library",
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "symfony/yaml": "^3.3",
+        "hassankhan/config": "^0.10.0",
+        "ramsey/uuid": "^3.6",
+        "catfan/Medoo": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
