--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "symfony/yaml": "^3.3",
         "hassankhan/config": "^0.10.0",
         "ramsey/uuid": "^3.6",
-        "catfan/Medoo": "^1.4"
+        "catfan/Medoo": "^1.4",
+        "malkusch/lock": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
