--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,10 @@
             "parallel-lint . --exclude vendor",
             "phpunit ./tests/Util"
         ]
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.x-dev"
+        }
     }
 }
