--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "hassankhan/config": "^0.10.0",
         "ramsey/uuid": "^3.6",
         "catfan/Medoo": "^1.4",
-        "malkusch/lock": "^1.0"
+        "malkusch/lock": "^1.0",
+        "windomz/shmcache": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
