--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "ramsey/uuid": "^3.6",
         "catfan/Medoo": "^1.4",
         "malkusch/lock": "^1.0",
-        "windomz/shmcache": "^1.0"
+        "windomz/shmcache": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.2",
@@ -42,7 +42,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.3.x-dev"
+            "dev-master": "0.4.x-dev"
         }
     }
 }
